# Template

./:  deployment_instructions.md  .gitignore  README.md  calibration.json  deployment_instructions.md  main.py  positioning_log.csv  result.path  script.py  state.json
42/: .gitignore  README.md  docker-compose.yml
42/app/: 1.path  README.md  app.py  beacons_kpa.beacons  collect.py  esp_client.py  live_beacon_distance.py  position.py  replay_csv.py  requirements.txt  requirenments.txt  standart.path  subscriber.py  telemetry_log.csv  telemetry_storage.csv
42/docker/: .dockerignore  Dockerfile  Dockerfile.dev  mosquitto.conf  passwd
42/esp32/: README.md  boot.py
42/streamlit/: app.py  collect.py  requirenments.txt  serv.py
AKL/: LICENSE.md  RESULT.txt  Readme.md  info.txt
Barabukhi/: MACs.txt  README.md  docker-compose.yml  path_kpa.path  road_34_CD_B0_33_53_E8_2025-10-03T07-02-03.path
Barabukhi/backend/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt
Barabukhi/client-indoor-locator/: Dockerfile  README.md  package.json
Barabukhi/esp32/: blut.py  connect.py  get_mac.py  itog.py  itog_2.py  itog_3.py  show_info.py  wifi.py
Barabukhi/server-test/: get_freq.php  get_map.php  get_status_road.php  ping.php  send_signal.php
BezCode/: Docker-compose.yml  README.md
BezCode/backend/: Dockerfile  positioning_engine.py  requirements.txt
BezCode/config/: mosquitto.conf  standart.beacons
BezCode/data/: route_20251003_052732.path
BezCode/esp32/: .gitignore  Dockerfile  config.json
BezCode/esp32_simulator/: Dockerfile  mqtt_bridge.py  simulator.py
BezCode/frontend/: Dockerfile  app.py  requirements.txt
CR7/: README.md  deployment_instructions.md  docker-compose.yml  sol.path
CR7/backend/: Dockerfile  api.py  beacons.py  config.py  main.py  mqtt_handler.py  requirements.txt  state.json  state.py  trilateration.py
CR7/esp32/: main.py
CR7/frontend/: Dockerfile  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
FITonyashkii/: .gitignore  Dockerfile  README.md  result.path
FITonyashkii/esp/: main.py
FITonyashkii/public/: app.js  index.html  styles.css
FITonyashkii/server/: config.py  requirements.txt  rssi_filter.py  rssi_locator.py  server.py  solver.py  start.sh
NoBrainLowEnergy/: .dockerignore  beacons_kpa.beacons  docker-compose.yml  front.dockerfile  path.path
Swamp_Mushrooms/: CMakeLists.txt  README.md  docker-compose.yml
Swamp_Mushrooms/backend/: Dockerfile  README.md  docker-compose.yml  requirements.txt
Swamp_Mushrooms/cpp/: CMakeLists.txt
Swamp_Mushrooms/cpp/include/: pos_estimator.hpp
Swamp_Mushrooms/cpp/src/: pos_estimator.cpp  pybind_module.cpp
Swamp_Mushrooms/esp32BLE/: platformio.ini
Swamp_Mushrooms/frontend/: index.html  main.js  package-lock.json  package.json
Swamp_Mushrooms/python/: Dockerfile  config.py  estimator.py  main.py  mqtt_handler.py  requirements.txt  rssi_utils.py  ws_server.py
Swamp_Mushrooms/some/: README.md  mqtt_client.py  mqtt_runner.py  positions_log.csv  rssi_filter.py  runner.py
SysCall/: README.md  app.py  config.py  main.py  mqtt_client.py  positioning.py  result.path  utils.py
Tri_sira_team/: README.md  positions.csv
Tri_sira_team/backend/: .env  Dockerfile  docker-compose.yml  go.mod  go.sum  mosquitto.conf
Tri_sira_team/embedded/: KalmanFilter.py  README.md  esp.py  secrets.py
Tri_sira_team/frontend/: callbacks.py  layout.py  main.py
YOUR_TEAM_NAME/: docker-compose.yml  presentation.path
YOUR_TEAM_NAME/backend/: api.py  beacons.py  config.py  main.py  mqtt_handler.py  pyproject.toml  requirements.txt  state.py  trilateration.py
YOUR_TEAM_NAME/deploy/: docker-compose.yml
YOUR_TEAM_NAME/esp32/: main.py
YOUR_TEAM_NAME/esp32-test/: main.py
YOUR_TEAM_NAME/frontend/: nuxt.config.ts
YOUR_TEAM_NAME/web/: app.py
Yadershiki/: README.md  SETUP.md  SETUP_CLIENT.md  SETUP_ESP32.md  SETUP_SERVER.md
backend/proBLEms/: docker-compose.yml  standart.beacons
microcontroller/: main.py
n00bmasters/: README.md  path.path
n00bmasters/docker/: docker-compose.yml
n00bmasters/firmware/: install_libs.py  main.py
n00bmasters/mosquitto/: docker-compose.yml
n00bmasters/src/: .gitignore  Makefile  calibrate.py  fingerprint_config.json  main_app.py  main_math.py  pyvenv.cfg  requirements.txt  server.py  tx_power_config.json
proBLEms/: Dockerfile  README.md  docker-compose.yml  requirements.txt  solution.path
results/: result.path
solaris/: README.md  boot.py  main.py
solaris/app/: CMakeLists.txt
solaris/bacon-src/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  main.cpp  resources.qrc
solaris/bacon-src/lib/connector/: CMakeLists.txt  README.md
solaris/bacon-src/lib/connector/include/config/: config.h
solaris/bacon-src/lib/connector/include/message_objects/: BLE.h
solaris/bacon-src/lib/connector/include/mqtt_connector/: connection_manager.h  message_handler.h  mqtt_client.h  types.h
solaris/bacon-src/lib/connector/include/navigator/: navigator.h
solaris/bacon-src/lib/connector/src/config/: config.cpp
solaris/bacon-src/lib/connector/src/mqtt_connector/: connection_manager.cpp  message_handler.cpp  mqtt_client.cpp
solaris/bacon-src/lib/connector/src/navigator/: navigator.cpp
solaris/bacon-src/lib/model/: CMakeLists.txt  abstractitem.hpp  beacon.hpp  espobject.hpp  model.cpp  model.hpp  model_utils.cpp  model_utils.hpp
solaris/bacon-src/lib/view/: CMakeLists.txt
solaris/bacon-src/lib/view/beaconeditor/: CMakeLists.txt  beaconeditor.cpp  beaconeditor.hpp  beaconeditor.ui
solaris/bacon-src/lib/view/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
solaris/bacon-src/lib/view/pathcontroller/: CMakeLists.txt  pathcontroller.cpp  pathcontroller.hpp  pathcontroller.ui  utils.cpp  utils.hpp
solaris/bacon-src/lib/view/scene/: CMakeLists.txt  beaconitem.hpp  const.hpp  espitem.hpp  griditem.hpp  pointitem.hpp  scene.cpp  scene.hpp  waveitem.hpp
yadronshiki/: Dockerfile.locator  README.md  docker-compose.yml  mosquitto.conf  requirements.txt  solution_standart.path  standart.beacons
(+194 files in other folders)
