cmake_minimum_required(VERSION 4.0)
project(app)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)


find_package(Qt6 COMPONENTS
        Core
        Gui
        Widgets
        REQUIRED)

add_executable(app main.cpp)
target_link_libraries(app
        Qt::Core
        Qt::Gui
        Qt::Widgets
)

